create graphs with jdeps